--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -460,7 +460,7 @@ body.dark-theme {
 }
 
 .home__social {
-  height: min-content;
+  height: fit-content;
   position: absolute;
   left: -3rem;
   top: 0;
