--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -460,7 +460,7 @@ body.dark-theme {
 }
 
 .home__social {
-  height: auto;
+  height: 32px;
   position: absolute;
   left: -3rem;
   top: 0;
@@ -474,7 +474,7 @@ body.dark-theme {
   background-color: var(--black-color-light);
   color: var(--white-color);
   font-size: 1.25rem;
-  padding: 2px;
+  padding: 6px;
   display: grid;
   place-items: center;
   transition: background-color .3s;
